tests/baselines/reference/errorsOnUnionsOfOverlappingObjects01.errors.txt
tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts(18,3): error TS2345: Argument of type '{ a: string; b: string; }' is not assignable to parameter of type 'Foo | Other'.
  Type '{ a: string; b: string; }' is not assignable to type 'Foo'.
    Types of property 'b' are incompatible.
      Type 'string' is not assignable to type 'number'.
tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts(19,3): error TS2345: Argument of type '{ a: string; b: string; }' is not assignable to parameter of type 'Foo | Other'.
  Type '{ a: string; b: string; }' is not assignable to type 'Foo'.
    Types of property 'b' are incompatible.
      Type 'string' is not assignable to type 'number'.
tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts(24,5): error TS2345: Argument of type '{ a: string; b: string; }' is not assignable to parameter of type 'Bar | Other'.
  Object literal may only specify known properties, and 'a' does not exist in type 'Bar | Other'.
tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts(42,10): error TS2345: Argument of type '{ dog: string; }' is not assignable to parameter of type 'ExoticAnimal'.
  Property 'cat' is missing in type '{ dog: string; }' but required in type 'CatDog'.
tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts(43,10): error TS2345: Argument of type '{ man: string; bear: string; }' is not assignable to parameter of type 'ExoticAnimal'.
  Property 'pig' is missing in type '{ man: string; bear: string; }' but required in type 'ManBearPig'.
tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts(46,26): error TS2345: Argument of type '{ man: string; beer: string; }' is not assignable to parameter of type 'ExoticAnimal'.
  Object literal may only specify known properties, and 'beer' does not exist in type 'ExoticAnimal'.
tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts(47,10): error TS2345: Argument of type '{ man: string; beer: string; }' is not assignable to parameter of type 'ExoticAnimal'.
  Type '{ man: string; beer: string; }' is missing the following properties from type 'ManBearPig': bear, pig


==== tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts (7 errors) ====
    interface Foo {
        a: string;
        b: number;
    };
    
    interface Bar {
        b: string;
    }
    
    interface Other {
        totallyUnrelatedProperty: number;
    }
    
    export let x = { a: '', b: '' };
    
    declare function f(x: Foo | Other): any;
    
    f(x);
      ~
!!! error TS2345: Argument of type '{ {|a|0|}: string; {|b|1|}: string; }' is not assignable to parameter of type '{|Foo|2|} | {|Other|3|}'.
!!! error TS2345:   Type '{ {|a|4|}: string; {|b|5|}: string; }' is not assignable to type '{|Foo|6|}'.
!!! error TS2345:     Types of property 'b' are incompatible.
!!! error TS2345:       Type 'string' is not assignable to type 'number'.
!!! annotated symbol 0 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:14:18
!!! annotated symbol 1 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:14:25
!!! annotated symbol 2 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:1:11
!!! annotated symbol 3 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:10:11
!!! annotated symbol 4 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:14:18
!!! annotated symbol 5 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:14:25
!!! annotated symbol 6 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:1:11
    f({ a: '', b: '' })
      ~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ {|a|0|}: string; {|b|1|}: string; }' is not assignable to parameter of type '{|Foo|2|} | {|Other|3|}'.
!!! error TS2345:   Type '{ {|a|4|}: string; {|b|5|}: string; }' is not assignable to type '{|Foo|6|}'.
!!! error TS2345:     Types of property 'b' are incompatible.
!!! error TS2345:       Type 'string' is not assignable to type 'number'.
!!! annotated symbol 0 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:19:5
!!! annotated symbol 1 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:19:12
!!! annotated symbol 2 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:1:11
!!! annotated symbol 3 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:10:11
!!! annotated symbol 4 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:19:5
!!! annotated symbol 5 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:19:12
!!! annotated symbol 6 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:1:11
    
    declare function g(x: Bar | Other): any;
    
    g(x);
    g({ a: '', b: '' })
        ~~~~~
!!! error TS2345: Argument of type '{ {|a|0|}: string; {|b|1|}: string; }' is not assignable to parameter of type '{|Bar|2|} | {|Other|3|}'.
!!! error TS2345:   Object literal may only specify known properties, and 'a' does not exist in type 'Bar | Other'.
!!! annotated symbol 0 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:24:5
!!! annotated symbol 1 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:24:12
!!! annotated symbol 2 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:6:11
!!! annotated symbol 3 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:10:11
    
    declare function h(x: Foo | Bar | Other): any;
    
    h(x);
    h({ a: '', b: '' })
    
    interface CatDog { cat: any, dog: any }
    interface ManBearPig { man: any, bear: any, pig: any }
    interface Platypus { platypus: any }
    
    type ExoticAnimal =
        | CatDog
        | ManBearPig
        | Platypus;
    
    declare function addToZoo(animal: ExoticAnimal): void;
    
    addToZoo({ dog: "Barky McBarkface" });
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ {|dog|0|}: string; }' is not assignable to parameter of type '{|ExoticAnimal|1|}'.
!!! error TS2345:   Property 'cat' is missing in type '{ {|dog|2|}: string; }' but required in type '{|CatDog|3|}'.
!!! related TS2728 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:31:20: 'cat' is declared here.
!!! annotated symbol 0 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:42:12
!!! annotated symbol 1 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:35:6
!!! annotated symbol 2 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:42:12
!!! annotated symbol 3 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:31:11
    addToZoo({ man: "Manny", bear: "Coffee" });
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ {|man|0|}: string; {|bear|1|}: string; }' is not assignable to parameter of type '{|ExoticAnimal|2|}'.
!!! error TS2345:   Property 'pig' is missing in type '{ {|man|3|}: string; {|bear|4|}: string; }' but required in type '{|ManBearPig|5|}'.
!!! related TS2728 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:32:45: 'pig' is declared here.
!!! annotated symbol 0 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:43:12
!!! annotated symbol 1 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:43:26
!!! annotated symbol 2 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:35:6
!!! annotated symbol 3 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:43:12
!!! annotated symbol 4 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:43:26
!!! annotated symbol 5 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:32:11
    
    const manBeer = { man: "Manny", beer: "Coffee" };
    addToZoo({ man: "Manny", beer: "Coffee" });
                             ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ {|man|0|}: string; {|beer|1|}: string; }' is not assignable to parameter of type '{|ExoticAnimal|2|}'.
!!! error TS2345:   Object literal may only specify known properties, and 'beer' does not exist in type 'ExoticAnimal'.
!!! annotated symbol 0 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:46:12
!!! annotated symbol 1 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:46:26
!!! annotated symbol 2 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:35:6
    addToZoo(manBeer);
             ~~~~~~~
!!! error TS2345: Argument of type '{ {|man|0|}: string; {|beer|1|}: string; }' is not assignable to parameter of type '{|ExoticAnimal|2|}'.
!!! error TS2345:   Type '{ man: string; beer: string; }' is missing the following properties from type 'ManBearPig': bear, pig
!!! annotated symbol 0 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:45:19
!!! annotated symbol 1 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:45:33
!!! annotated symbol 2 tests/cases/compiler/errorsOnUnionsOfOverlappingObjects01.ts:35:6